base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: liberty-app-preview
  labels:
    app: liberty-app
spec:
  type: ClusterIP
  ports:
  - port: 9080
    targetPort: 9080
    protocol: TCP
    name: http
  - port: 9443
    targetPort: 9443
    protocol: TCP
    name: https
  selector:
    app: liberty-app
