base/route-active.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: liberty-app
  labels:
    app: liberty-app
spec:
  to:
    kind: Service
    name: liberty-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
