base/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: liberty-app-preview
  labels:
    app: liberty-app
spec:
  to:
    kind: Service
    name: liberty-app-preview
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
